--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -140,4 +140,5 @@ h1, h2, h3, h4, h5, h6, h1 > a, .card-title, .toggle-header-divider {
         margin-left: auto;
         left: auto;
         right: auto;
+    }
 }
