Add to home page and slight readme changes

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>GASapp Home</h1>
+<h2>GASapp Home</h2>
+
+<p>If you are a music enthusiast, you may suffer from GAS - Gear Acquisition Syndrome. Musicians often find themselves buying more music gear than they could ever need, and it's easy to lose track of what you have, especially if you share equipment with friends and music buddies.</p>
+<p>GASapp is designed to be a simple, intuitive way to log and maintain your gear inventory, check how much your equipment is worth, and maintain your own personal wishlist.</p>
 
 {% endblock %}
