--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
     <header class="navbar-fixed">
         <nav class="blue-grey">
             <div class="nav-wrapper">
-                <a href="/" class="left brand-logo hide-on-med-and-down orange-text">&nbsp;&nbsp;GASapp</a>
+                <a href="/" class="left brand-logo hide-on-med-and-down orange-text" id="nav-logo">&nbsp;&nbsp;GASapp</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons orange-text">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     {% if user.is_authenticated %}
