--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,8 +19,10 @@
     <header class="navbar-fixed">
         <nav class="blue-grey">
             <div class="nav-wrapper">
-                <a href="/" class="left brand-logo hide-on-med-and-down orange-text" id="nav-logo">&nbsp;&nbsp;GASapp</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons orange-text">menu</i></a>
+                <a href="/" class="left brand-logo hide-on-med-and-down orange-text"
+                    id="nav-logo">&nbsp;&nbsp;GASapp</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i
+                        class="material-icons orange-text">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     {% if user.is_authenticated %}
                     <li><a class="orange-text" href="{% url 'index' %}">See Your Collection</a></li>
@@ -53,10 +55,11 @@
         {% endblock %}
     </main>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const navEls = document.querySelectorAll('.sidenav');
             const instances = M.Sidenav.init(navEls, {});
         });
     </script>
 </body>
+
 </html>
