--- a/main_app/templates/accessories/detail.html
+++ b/main_app/templates/accessories/detail.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <h1>{{ accessory.name }}</h1>
-
 <div class="row card-container">
     <div class="col s12 m8 l6">
         <div class="card extra-large">
@@ -32,9 +31,7 @@
         </div>
     </div>
 </div>
-
 <hr class="blue-grey">
-
 <h3>Photos for this accessory:</h3>
 <div class="row card-container">
     <div class="col s12 m6">
@@ -48,8 +45,7 @@
                 {% empty %}
                 <div class="card-panel blue-grey-text center-align">No Photos Uploaded</div>
                 {% endfor %}
-                <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST"
-                    class="card-panel">
+                <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
                     {% csrf_token %}
                     <input type="file" name="photo-file">
                     <br><br>
@@ -59,9 +55,7 @@
         </div>
     </div>
 </div>
-
 <hr class="blue-grey">
-
 <h3>Reverb valuation:</h3>
 <div class="row card-container">
     <div class="col s12 m8">
