--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -16,11 +16,11 @@
                 <p>Type: {{ instrument.instrument_type }}</p>
                 <p>Condition: {{ instrument.get_condition_display }}</p>
                 <p>
-                    Owned: 
+                    Owned:
                     {% if instrument.owned %}
-                        <span style="color:green">True</span>
+                    <span style="color:green">True</span>
                     {% else %}
-                        <span style="color:red">False</span>
+                    <span style="color:red">False</span>
                     {% endif %}
                 </p>
             </div>
@@ -31,18 +31,17 @@
         </div>
     </div>
 </div>
-
 <hr class="blue-grey">
 <h3>Associated Accessories:</h3>
-<div class="row card-container">
 {% for accessory in instrument.accessories.all %}
-<div class="col s12 m6">
+<div class="row card-container">
+    <div class="col s12 m6">
         <div class="card horizontal">
             <div class="card-image">
                 <img src="{{ accessory.accessoryphoto_set.first.url  }}">
             </div>
             <div class='card-stacked'>
-                <div class="card-content">                
+                <div class="card-content">
                     <h6> {{ accessory.name }}</h6>
                     <form action="{% url 'dis_assoc_accessory' instrument.id accessory.id %}">
                         <button type="submit" class="btn btn-small">Remove</button>
@@ -51,17 +50,15 @@
             </div>
         </div>
     </div>
-    {% endfor %}
-       
 </div>
+{% endfor %}
 <hr class="blue-grey">
-
 <h3>Available Accessories:</h3>
 <div class="row card-container">
-{% for accessory in accessories %}
-<div class="col s12 m6">
+    {% for accessory in accessories %}
+    <div class="col s12 m6">
         <div class="card">
-            <div class="card-content">                
+            <div class="card-content">
                 <h6>{{ accessory.name }}</h6>
                 <form action="{% url 'assoc_accessory' instrument.id accessory.id %}">
                     <button type="submit" class="btn btn-small">Add</button>
@@ -69,21 +66,17 @@
             </div>
         </div>
     </div>
-{% endfor%}
- <div class="col s12 m6">
+    {% endfor%}
+    <div class="col s12 m6">
         <div class="card">
-            <div class="card-content">                
+            <div class="card-content">
                 <p>Don't see the one you want?</p>
                 <a href="{% url 'accessories_create' %}">Click here to add a new one</a>
             </div>
         </div>
     </div>
 </div>
-
-   
-
 <hr class="blue-grey">
-
 <h3>Photos for this instrument:</h3>
 <div class="row card-container">
     <div class="col s12 m6">
@@ -97,8 +90,7 @@
                 {% empty %}
                 <div class="card-panel blue-grey-text center-align">No Photos Uploaded</div>
                 {% endfor %}
-                <form action="{% url 'add_photo' instrument.id 0 %}" enctype="multipart/form-data" method="POST"
-                    class="card-panel">
+                <form action="{% url 'add_photo' instrument.id 0 %}" enctype="multipart/form-data" method="POST" class="card-panel">
                     {% csrf_token %}
                     <input type="file" name="photo-file">
                     <br><br>
@@ -108,9 +100,7 @@
         </div>
     </div>
 </div>
-
 <hr class="blue-grey">
-
 <h3>Reverb valuation:</h3>
 <div class="row card-container">
     <div class="col s12 m8">
