--- a/main_app/templates/accessories/detail.html
+++ b/main_app/templates/accessories/detail.html
@@ -45,7 +45,8 @@
                 {% empty %}
                 <div class="card-panel blue-grey-text center-align">No Photos Uploaded</div>
                 {% endfor %}
-                <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+                <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST"
+                    class="card-panel">
                     {% csrf_token %}
                     <input type="file" name="photo-file">
                     <br><br>
@@ -56,18 +57,40 @@
     </div>
 </div>
 <hr class="blue-grey">
+{% if accessory.owned %}
 <h3>Reverb valuation:</h3>
 <div class="row card-container">
     <div class="col s12 m8">
         <div class="card">
             <div class="card-content">
-                <span class="card-title">Reverb.com Price Guide for: <span class="bold">{{ accessory.name }}</span></span>
+                <span class="card-title">Reverb.com Price Guide for: <span
+                        class="bold">{{ accessory.name }}</span></span>
                 <p><span class="bold">Title: </span> {{ price_guide.title }}</p>
-                <p><span class="bold">Est. Used Price Range: </span> ${{ price_guide.low }} - ${{ price_guide.high }}</p>
-                <p><span class="bold">Link: </span><a href="{{ price_guide.url }}" target="_blank">{{ price_guide.url }}</a></p>
+                <p><span class="bold">Est. Used Price Range: </span> ${{ price_guide.low }} - ${{ price_guide.high }}
+                </p>
+                <p><span class="bold">Link: </span><a href="{{ price_guide.url }}"
+                        target="_blank">{{ price_guide.url }}</a></p>
             </div>
         </div>
     </div>
 </div>
+{% else %}
+<h3>Reverb listing:</h3>
+<div class="row card-container">
+    <div class="col s12 m8">
+        <div class="card">
+            <div class="card-content">
+                {% if listing %}
+                <span class="card-title">Reverb.com Listing for: <span class="bold">{{ accessory.name }}</span></span>
+                <p><span class="bold">Link: </span><a href="{{ listing }}" target="_blank">{{ listing }}</a></p>
+                {% else %}
+                <span class="card-title">No listing found on Reverb.com for: <span
+                        class="bold">{{ accessory.name }}</span></span>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
 
 {% endblock %}
