views.py formatting and home page edits

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -13,11 +13,8 @@
                 <p>GASapp is designed to be a simple, intuitive way to log and maintain your gear inventory, check how
                     much your equipment is worth, and maintain your own personal wishlist.
                 </p><br>
-                <p>With Reverb.com estimated valuations built into GASapp, just upload your collection and instantly
-                    find out what your gear is worth.
-                    Don't have a collection yet and want to find out how much a similar collection item is selling for
-                    so you can get a good deal?
-                    Enter the item into GASapp wishlist and find out instantly what a fair price for that item is!
+                <p>With Reverb.com's catalog and price guide built into GASapp, just upload your collection and instantly
+                    find out what your gear is worth. Don't have a collection yet? Enter the item into GASapp wishlist and instantly find current listings of that item for sale!
                 </p><br>
             </div>
         </div>
